-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.7.0
-
None
-
3
-
16097
In lnet_dyn_add_ni(), if lnet_startup_lndnis() fails, then NI on the local &net_head list is freed. But lnet_startup_lndnis(&net_head) can fail after list_del(&ni->ni_list), i.e. after the NI has been removed already from the &net_head. In this case I failed to see where the NI gets cleaned up and freed.
- is related to
-
LU-5849 DLC: parse networks function needs to return the number of parsed networks
-
- Resolved
-
-
LU-6002 DLC: startup acceptor dynamically.
-
- Resolved
-
-
LU-5839 LNetNIInit() should not call lnet_destroy_routes() before lnet_parse_routes() has been called
-
- Resolved
-
-
LU-5850 DLC: lnet_startup_lndnis should clean up after itself
-
- Resolved
-
- is related to
-
LU-5568 kernel crash when when network initialization failed
-
- Resolved
-
-
LU-2456 Dynamic LNet Config Main Development Work
-
- Resolved
-