LU-5734 lnet: cleanup failed NI in lnet_startup_lndnis()

In lnet_dyn_add_ni(), if lnet_startup_lndnis() fails, then NI on the
local &net_head list is freed.But lnet_startup_lndnis(&net_head) can
fail after list_del(&ni->ni_list), i.e. after the NI has been removed
already from the &net_head. Clear up and free NI this these cases.

Signed-off-by: Wang Shilong <wshilong@ddn.com>
Change-Id: I96a43798e744f821676c34a2e40f8b6a7494984f